--- a/header.css
+++ b/header.css
@@ -25,5 +25,12 @@
     top: 100%;
     width: 60vw;
   }
-  
+  .lista-menu__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+  }
+  .container__botao {
+    display: none;
+  }
+    
   
