--- a/style.css
+++ b/style.css
@@ -34,3 +34,6 @@ body {
 }
 @import url("styles/header.css");
 @import url("styles/banner.css");
+@import url("styles/header.css");
+@import url("styles/banner.css");
+@import url("styles/carrossel.css");
