--- a/style.css
+++ b/style.css
@@ -35,4 +35,8 @@ body {
 @import url("styles/header.css");
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
+@import url("styles/topicos.css");@import url("styles/header.css");
+@import url("styles/banner.css");
+@import url("styles/carrossel.css");
 @import url("styles/topicos.css");
+@import url("styles/contato.css");
