--- a/style.css
+++ b/style.css
@@ -39,4 +39,9 @@ body {
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
 @import url("styles/topicos.css");
+@import url("styles/contato.css");@import url("styles/header.css");
+@import url("styles/banner.css");
+@import url("styles/carrossel.css");
+@import url("styles/topicos.css");
 @import url("styles/contato.css");
+@import url("styles/rodapé.css");
